Remove conflict with Adafruit I2DCdevice

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=RAK12052-MLX90640
-version=1.0.0
+version=1.0.1
 author=RAKWireless <rakwireless.com>
 maintainer=RAKWireless <rakwireless.com>
 sentence=RAKWireless library for the matrix
@@ -7,3 +7,4 @@ paragraph=RAK IR solutions
 category=Sensors
 url=https://github.com/RAKWireless/RAK12052-MLX90640
 architectures=*
+depends=Adafruit BusIO
